--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -37,10 +37,10 @@ section.show {
     color: white;
 }
 .profile-img {
-    width: 150px;
-    height: 150px;
+    width: 250px;
+    height: 250px;
     border-radius: 50%;
-    border: 4px solid white;
+    border: 2px solid white;
     object-fit: cover;
     margin-bottom: 15px;
 }
@@ -51,7 +51,7 @@ section.show {
     transition: transform 0.3s;
 }
 .social-icons a:hover {
-    transform: scale(1.2);
+    transform: scale(1.5);
 }
 /* Skills Section */
 #skills {
@@ -79,22 +79,6 @@ section.show {
     color: #ff4d6d;
     margin-bottom: 10px;
 }
-/* Projects Section */
-#projects {
-    background: #f4f4f4;
-}
-.project {
-    background: white;
-    padding: 15px;
-    border-radius: 12px;
-    margin: 10px;
-    width: 250px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
-}
-.project img {
-    width: 100%;
-    border-radius: 8px;
-}
 /* Contact Section */
 #contact {
     background: linear-gradient(135deg, #ff80a1, #ff4d6d);
@@ -110,7 +94,7 @@ section.show {
 
 <!-- Home Page -->
 <section id="home">
-    <img src="https://drive.google.com/file/d/1Fwg4sluCI0GEH2-p__r1gWCrlw3z5hL_/view?usp=sharing" alt="Gowsika R" class="profile-img">
+    <img src="myphpto.jpg" alt="Gowsika R" class="profile-img">
     <h1>Gowsika R</h1>
     <p>Pre-final year student | CSE</p>
     <div class="social-icons">
@@ -129,25 +113,7 @@ section.show {
         <div class="skill"><i class="fas fa-code"></i><p>C</p></div>
         <div class="skill"><i class="fab fa-python"></i><p>Python</p></div>
     </div>
-</section>
 
-<!-- Projects Page -->
-<section id="projects">
-    <h2>My Projects</h2>
-    <div class="skill-list">
-        <div class="project">
-            <img src="https://via.placeholder.com/250x150" alt="Project 1">
-            <p>Project Title 1</p>
-        </div>
-        <div class="project">
-            <img src="https://via.placeholder.com/250x150" alt="Project 2">
-            <p>Project Title 2</p>
-        </div>
-        <div class="project">
-            <img src="https://via.placeholder.com/250x150" alt="Project 3">
-            <p>Project Title 3</p>
-        </div>
-    </div>
 </section>
 
 <!-- Contact Page -->
@@ -175,4 +141,5 @@ sections.forEach(section => {
 </script>
 
 </body>
+
 </html>
